<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/sukses2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/roboto"
        android:text="@string/berhasil"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ucapan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ucapan"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ucapan"
        android:textAlignment="center"
        android:textSize="@dimen/dimen_14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ok"
        android:layout_width="@dimen/dimen_340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:backgroundTint="@color/wildo"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/sukses"
        android:layout_width="233dp"
        android:layout_height="312dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/sukses2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_success" />

</androidx.constraintlayout.widget.ConstraintLayout>